
************************* Version 8.01ap: *********************************

IMP: (11/17/04, DN) XSize and YSize of serpentine transistors are not properly calcualted.
FIX: getShapeOfNode and getShapeOfPort use getAnchorCenter instead of getTrueCenter
     In NodeInst use getShapeOfNode to calculate sizes of primitive with TRACE.

IMP/MAN: (11/15/04, GVG) Network tool connected to 3D View

IMP/MAN: (11/15/04, GVG) Ability to save ErrorLogger for debugging purposes.

************************* Version 8.01ao: *********************************

IMP: (11/15/04, GVG) Prevent NullException in clearSetBit

BUG: (11/15/04, GVG) Rolling back changes to fix "BUG: (11/9/04, GVG) DRC and notch errors".

BUG: (11/15/04, GVG) Transistor poly layer was assigned to silicide block node (errors in TSMC180 and 90 techs).
FIX: Switched to silicide layer

BUG: (11/15/04, DN) GetInfoArc may cause error if ArcInst has not network on it.
FIX: In GetInfoArc check getNetworkName == null.

BUG: (11/15/04, DN) Arcs in ELIB from Electric C may not fit into port insts.
FIX: In ELIB and JELIB readers use poly.polyDistance(pnt) < 0.02 instead of poly.isInside(pnt).

BUG: (11/15/04, DN) Size of rotated primitives with polygon trace are not
    calculated, when ELIB is loaded.
FIX: Move scaleOutlineInformation(ni) before ni.lowLevelPopulate().

Deleting an export may delete the node.
FIX: Do not consider exports to be attached to nodes when deleting.

BUG: (11/14/04, RK) MoCMOS Gate generators were producing CIF resolution errors

IMP: (11/14/04, RK) Improve NCC size mismatch error messages

IMP: (11/14/04, SMR) Added LEF and DEF input.

BUG: (11/14/04, SMR) Verilog netlister breaks wide names.
FIX: In "Output.writeWidthLimited()", be more forgiving about splitting wide lines.

BUG: (11/13/04, RK) Reduce storage utilization of net equivalence feature

************************* Version 8.01an: *********************************
